INCLUDE_DIRECTORIES(${CHOLMOD_INCLUDE_DIR})
#TARGET_LINK_LIBRARIES(LinearSFMImp ${CHOLMOD_LIBRARIES} goto2 goto2_prescottp-r1.13 core)

AUX_SOURCE_DIRECTORY(. DIR_LinearSFMImp_SRCS)   
ADD_LIBRARY(LinearSFMImp STATIC ${DIR_LinearSFMImp_SRCS})  
#TARGET_LINK_LIBRARIES(LinearSFMImp ${CHOLMOD_LIBRARIES} goto2 goto2_prescottp-r1.13 )
TARGET_LINK_LIBRARIES(LinearSFMImp ${CHOLMOD_LIBRARIES} ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
